packages/website/src/index.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family:
    -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
    Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

main {
  position: relative;
}
main > * {
  position: absolute;
  width: 100vw;
  height: 100vh;
}

code {
  font-family: Monaco, Menlo, Consolas, 'Courier New', monospace;
  font-size: 12px;
  border-radius: 3px;

  padding: 2px 4px;
  white-space: nowrap;
  background-color: #f7f7f9;
  border: 1px solid #e1e1e8;
}

code a {
  color: inherit;
  text-decoration: none;
  color: #0645ad;
}
code a:hover {
  text-decoration: underline;
}

summary {
  cursor: pointer;
}

